apps/staging/homepage/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homepage
  namespace: homepage
  annotations:
    cert-manager.io/cluster-issuer: clusterissuer-staging
    gethomepage.dev/description: Dynamically Detected Homepage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
spec:
  gatewayClassName: cilium
  listeners:
    - name: homepage
      protocol: HTTPS
      port: 443
      hostname: "homepage.raymondcollazo.com"
      tls:
        certificateRefs:
          - kind: Secret
            name: homepage-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  parentRefs:
    - name: homepage
  hostnames:
    - "homepage.raymondcollazo.com"
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
