apps/staging/homepage/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Management
    gethomepage.dev/name: Homepage
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/description: Dynamically detected Homepage
spec:
  parentRefs:
    - name: lan-gateway
      namespace: lan-gateway
      sectionName: lan-https
  hostnames:
    - "homepage.raymondcollazo.com"
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
